fix align content problem by adjusting flex wrap prop

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,10 +18,9 @@ code {
 }
 
 .flex-alignments-section{
-  min-height: 100vh;
   display: flex;
   flex-direction: row;
-  padding-top: 20px;
+  padding: 20px 20px;
 }
 
 .blocks {
@@ -30,6 +29,8 @@ code {
   border: 1px solid #36d2df;
   width: calc(50% - 20px);
   // margin: 20px 20px;
+  flex-wrap: wrap;
+
 
   height: 400px;
 }
